<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.depot.DepotDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimaryDark"
            app:expandedTitleTextAppearance="@android:color/transparent">

            <ImageView
                android:id="@+id/iv_detailDepotImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/title_depot"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:elevation="6dp"
        android:src="@drawable/ic_depot"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.depot.DepotDetailActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.depot.DepotDetailActivity">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/title_depot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/txt_detailDepotMainName"
                    android:text="@string/title_depot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_location_on"
                    android:textSize="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/txt_detailDepotAddress"
                    android:text="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/avryr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="@dimen/activity_vertical_margin"/>
                <ProgressBar
                    android:id="@+id/pb_detailDepotAVRYOR"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:indeterminate="false"
                    android:maxHeight="10dip"
                    android:minHeight="10dip"
                    android:progress="100"/>
                <TextView
                    android:id="@+id/tv_detailDepotAVRYORstr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="center"
                    android:textColor="#000"
                    android:text="@string/avryrint"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/status_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/activity_vertical_margin"/>
                <TextView
                    android:text="@string/capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/txt_detailDepotStatusContainer"
                    android:text="@string/status_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
                <TextView
                    android:id="@+id/txt_detailDepotCapacity"
                    android:text="@string/capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/loading_unloading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:text="@string/f10ton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"
                    android:drawableLeft="@drawable/ic_forklift10t"/>
                <TextView
                    android:id="@+id/txt_detailDepotFL10T"
                    android:text="@string/forklift_10t"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:text="@string/f7ton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"
                    android:drawableLeft="@drawable/ic_forklift3t"/>
                <TextView
                    android:id="@+id/txt_detailDepotFL7T"
                    android:text="@string/forklift_7t"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:text="@string/f3ton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"
                    android:drawableLeft="@drawable/ic_forklift7t"/>
                <TextView
                    android:id="@+id/txt_detailDepotFL3T"
                    android:text="@string/forklift_3t"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:src="@drawable/ic_reachstackers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/txt_detailDepotRS"
                    android:text="@string/reachstacker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:src="@drawable/ic_sideloader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
                <TextView
                    android:id="@+id/txt_detailDepotSL"
                    android:text="@string/sideloader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/activity_vertical_margin"/>
                <TextView
                    android:text="@string/partner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_detailDepotServices"
                    android:text="@string/services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
                <TextView
                    android:id="@+id/txt_detailDepotPartner"
                    android:text="@string/partner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:textColor="#000"
                    android:textSize="@dimen/size_14"/>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>