<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.depot.DepotDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimaryDark"
            app:expandedTitleTextAppearance="@android:color/transparent">

            <ImageView
                android:id="@+id/iv_detailWarehouseImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/title_warehouse"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:elevation="6dp"
        android:src="@drawable/ic_warehouse"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.depot.DepotDetailActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.depot.DepotDetailActivity">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/title_warehouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/txt_detailWarehouseName"
                    android:text="@string/title_warehouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/code_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/activity_vertical_margin"/>
                <TextView
                    android:id="@+id/txt_detailWarehouseCodeArea"
                    android:text="@string/code_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="#000"
                    android:textSize="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_location_on"
                android:textSize="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/txt_detailWarehouseAddress"
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/status_warehouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/txt_detailWarehouseStatus"
                    android:text="@string/status_warehouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/status_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/txt_detailWarehouseStatusContainer"
                    android:text="@string/status_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/txt_detailWarehouseServices"
                    android:text="@string/services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"/>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>